# monkeyReader

./: .gitignore
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/database/: __init__.py  main.py  redisMain.py
backend/app/services/: auth_service.py  reading_tracker_service.py  translate_service.py
backend/services/: auth_service.py  mic_stream_service.py  passage.py  translate_service.py
frontend/: package.json
frontend/public/: audio-processor.js
frontend/src/: App.tsx  App_rought.tsx  config.ts
frontend/src/components/: Header.tsx  Logo.tsx
frontend/src/components/authentication/: forms.tsx
frontend/src/components/reading-test/: ReadingArea.tsx  TestInstruction.tsx
frontend/src/context/: authContext.tsx
frontend/src/firebase/: config.ts
frontend/src/pages/: Authentication.tsx  Home.tsx  ReadingTest.tsx
frontend/src/stores/: authStore.tsx  readTestStore.tsx
