[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "uvicorn[standard]>=0.34.2",
    "vosk>=0.3.45",
    "websockets>=15.0.1",
]
